--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.8.3",
     "echarts": "^6.0.0",
     "element-plus": "^2.10.5",
+    "pinia": "^3.0.3",
     "spark-md5": "^3.0.2",
     "video.js": "^8.23.3",
     "vue": "^3.2.13",
